# humanoid_league_msgs

./: .gitignore  .rdmanifest  CMakeLists.txt  Jenkinsfile  README.md  package.xml
action/: PlayAnimation.action
msg/: Action.msg  AdditionalServoData.msg  Animation.msg  Audio.msg  BallRelative.msg  BallsInImage.msg  BarInImage.msg  FieldBoundaryInImage.msg  FieldBoundaryRelative.msg  GameState.msg  GoalBarRelative.msg  GoalInImage.msg  GoalPartsInImage.msg  GoalPartsRelative.msg  GoalPostInImageArray.msg  GoalPostsRelative.msg  GoalRelative.msg  HeadMode.msg  ImageWithRegionOfInterest.msg  LineCircleInImage.msg  LineCircleRelative.msg  LineInformationInImage.msg  LineInformationRelative.msg  LineIntersectionInImage.msg  LineIntersectionRelative.msg  LineMarkingRelative.msg  LineSegmentInImage.msg  LineSegmentRelative.msg  Model.msg  MotionState.msg  ObstacleInImage.msg  ObstacleRelative.msg  ObstaclesInImage.msg  ObstaclesRelative.msg  PixelRelative.msg  PixelsRelative.msg  PolygonStamped.msg  PoseWithCovarianceArray.msg  Position.msg  Position2D.msg  (+9 more)
msg/behaviour/: Action.msg  HeadMode.msg  Role.msg
msg/vision/: BallInImage.msg  BallRelative.msg  BallsInImage.msg  GoalInImage.msg  GoalRelative.msg  LineInformationInImage.msg  LineInformationRelative.msg  LineMarkingInImage.msg  LineMarkingRelative.msg  LineSegmentInImage.msg  LineSegmentRelative.msg  ObstacleInImage.msg  ObstacleRelative.msg  ObstaclesRelative.msg  PostInImage.msg  PostsInImage.msg
